Feat: created a new branch in case something goes wrong - split functions into separate .js files and use main.js to implement dom. Setting up grid for html

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Menu</title>
+    <title>Battleship</title>
 </head>
 <body>
-    
+    <div id="app">
+        <h1 id="battleship-header">Battleship</h1>
+        <div id="container1">
+            <div id="container-left"></div>
+            <div id="container-right"></div>
+        </div>
+        <div id="container2">
+            <h2 id="player1-header">Score</h2>
+    </div>
 </body>
 </html>
