Feat: create DOM for gameover

--- a/src/template.html
+++ b/src/template.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
 </head>
+
 <body>
     <div id="app">
         <h1 id="battleship-header">Battleship</h1>
@@ -13,7 +15,9 @@
             <div id="container-right"></div>
         </div>
         <div id="container2">
-            <h2 id="player1-header">Score</h2>
-    </div>
+            <h2 id="turn-header">Turn:</h2>
+            <h2 id="player-turn">Player 1</h2>
+        </div>
 </body>
+
 </html>
